antlr4/generated/OCLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from OCL.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Ocl2CSharp {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class OCLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, BOOLEAN_LITERAL=115, FLOAT_LITERAL=116, STRING1_LITERAL=117, 
		STRING2_LITERAL=118, ENUMERATION_LITERAL=119, NULL_LITERAL=120, MULTILINE_COMMENT=121, 
		LINE_COMMENT=122, NEWLINE=123, INT=124, ID=125, WS=126;
	public const int
		RULE_type = 0, RULE_expressionList = 1, RULE_expression = 2, RULE_conditionalExpression = 3, 
		RULE_letExpression = 4, RULE_letBinding = 5, RULE_basicExpression = 6, 
		RULE_logicalExpression = 7, RULE_equalityExpression = 8, RULE_additiveExpression = 9, 
		RULE_multiplicativeExpression = 10, RULE_unaryExpression = 11, RULE_navigationExpression = 12, 
		RULE_primaryFactor = 13, RULE_postfixSuffix = 14, RULE_identOptType = 15, 
		RULE_identOptTypeList = 16, RULE_setExpression = 17, RULE_identifier = 18, 
		RULE_qualified_name = 19;
	public static readonly string[] ruleNames = {
		"type", "expressionList", "expression", "conditionalExpression", "letExpression", 
		"letBinding", "basicExpression", "logicalExpression", "equalityExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "navigationExpression", 
		"primaryFactor", "postfixSuffix", "identOptType", "identOptTypeList", 
		"setExpression", "identifier", "qualified_name"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Sequence'", "'('", "')'", "'Set'", "'Bag'", "'OrderedSet'", "'Ref'", 
		"'Map'", "','", "'Function'", "'='", "'if'", "'then'", "'else'", "'endif'", 
		"'let'", "'in'", "':'", "'oclIsKindOf'", "'oclIsTypeOf'", "'oclIsType'", 
		"'oclAsType'", "'oclIsUndefined'", "'oclIsInvalid'", "'.'", "'['", "']'", 
		"'and'", "'&'", "'or'", "'xor'", "'=>'", "'implies'", "'<'", "'>'", "'>='", 
		"'<='", "'/='", "'<>'", "'/:'", "'<:'", "'+'", "'-'", "'..'", "'|->'", 
		"'*'", "'/'", "'mod'", "'div'", "'not'", "'?'", "'!'", "'allInstances'", 
		"'oclType'", "'oclIsNew'", "'oclAsSet'", "'size'", "'max'", "'min'", "'indexOf'", 
		"'at'", "'isUnique'", "'->'", "'isEmpty'", "'notEmpty'", "'asSet'", "'asBag'", 
		"'asOrderedSet'", "'asSequence'", "'any'", "'first'", "'last'", "'reverse'", 
		"'floor'", "'round'", "'abs'", "'sum'", "'characters'", "'toInteger'", 
		"'toReal'", "'toBoolean'", "'toUpperCase'", "'toLowerCase'", "'union'", 
		"'intersection'", "'includes'", "'excludes'", "'including'", "'excluding'", 
		"'includesAll'", "'symmetricDifference'", "'excludesAll'", "'prepend'", 
		"'append'", "'count'", "'equalsIgnoreCase'", "'collect'", "'|'", "'select'", 
		"'reject'", "'forAll'", "'exists'", "'one'", "'closure'", "'sortedBy'", 
		"'insertAt'", "'iterate'", "';'", "'OrderedSet{'", "'}'", "'Bag{'", "'Set{'", 
		"'Sequence{'", "'Map{'", null, null, null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "BOOLEAN_LITERAL", "FLOAT_LITERAL", 
		"STRING1_LITERAL", "STRING2_LITERAL", "ENUMERATION_LITERAL", "NULL_LITERAL", 
		"MULTILINE_COMMENT", "LINE_COMMENT", "NEWLINE", "INT", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OCL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static OCLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OCLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OCLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 0, RULE_type);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40;
				Match(T__0);
				State = 41;
				Match(T__1);
				State = 42;
				type();
				State = 43;
				Match(T__2);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45;
				Match(T__3);
				State = 46;
				Match(T__1);
				State = 47;
				type();
				State = 48;
				Match(T__2);
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				Match(T__4);
				State = 51;
				Match(T__1);
				State = 52;
				type();
				State = 53;
				Match(T__2);
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 4);
				{
				State = 55;
				Match(T__5);
				State = 56;
				Match(T__1);
				State = 57;
				type();
				State = 58;
				Match(T__2);
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 5);
				{
				State = 60;
				Match(T__6);
				State = 61;
				Match(T__1);
				State = 62;
				type();
				State = 63;
				Match(T__2);
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 6);
				{
				State = 65;
				Match(T__7);
				State = 66;
				Match(T__1);
				State = 67;
				type();
				State = 68;
				Match(T__8);
				State = 69;
				type();
				State = 70;
				Match(T__2);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 7);
				{
				State = 72;
				Match(T__9);
				State = 73;
				Match(T__1);
				State = 74;
				type();
				State = 75;
				Match(T__8);
				State = 76;
				type();
				State = 77;
				Match(T__2);
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 8);
				{
				State = 79;
				identifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterExpressionList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitExpressionList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionListContext expressionList() {
		ExpressionListContext _localctx = new ExpressionListContext(Context, State);
		EnterRule(_localctx, 2, RULE_expressionList);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 82;
					expression();
					State = 83;
					Match(T__8);
					}
					} 
				}
				State = 89;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 90;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(OCLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LetExpressionContext letExpression() {
			return GetRuleContext<LetExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalExpressionContext conditionalExpression() {
			return GetRuleContext<ConditionalExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LogicalExpressionContext logicalExpression() {
			return GetRuleContext<LogicalExpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		try {
			State = 101;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				Match(ID);
				State = 93;
				Match(T__10);
				State = 96;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__15:
					{
					State = 94;
					letExpression();
					}
					break;
				case T__11:
					{
					State = 95;
					conditionalExpression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				logicalExpression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 99;
				conditionalExpression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 100;
				letExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConditionalExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ConditionalExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conditionalExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterConditionalExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitConditionalExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConditionalExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConditionalExpressionContext conditionalExpression() {
		ConditionalExpressionContext _localctx = new ConditionalExpressionContext(Context, State);
		EnterRule(_localctx, 6, RULE_conditionalExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(T__11);
			State = 104;
			expression();
			State = 105;
			Match(T__12);
			State = 106;
			expression();
			State = 107;
			Match(T__13);
			State = 108;
			expression();
			State = 109;
			Match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext[] letBinding() {
			return GetRuleContexts<LetBindingContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext letBinding(int i) {
			return GetRuleContext<LetBindingContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public LetExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterLetExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitLetExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetExpressionContext letExpression() {
		LetExpressionContext _localctx = new LetExpressionContext(Context, State);
		EnterRule(_localctx, 8, RULE_letExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(T__15);
			State = 112;
			letBinding();
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 113;
				Match(T__8);
				State = 114;
				letBinding();
				}
				}
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 120;
			Match(T__16);
			State = 121;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetBindingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(OCLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public LetBindingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letBinding; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.EnterLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IOCLListener typedListener = listener as IOCLListener;
			if (typedListener != null) typedListener.ExitLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOCLVisitor<TResult> typedVisitor = visitor as IOCLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetBinding(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetBindingContext letBinding() {
		LetBindingContext _localctx = new LetBindingContext(Context, State);
		EnterRule(_localctx, 10, RULE_letBinding);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			Match(ID);
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__17) {
				{
				State = 124;
				Match(T__17);
				State = 125;
				type();
				}
			}

			State = 128;
			Match(T__10);
			State = 129;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
